--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,18 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-@keyframes fade-in {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
-
-.animate-fade-in {
-  animation: fade-in 0.3s ease-out;
-}
-
